# Project_AK2

./: .gitignore  CMakeLists.txt  MAKEFILE  README.md  StackAssembler.cpp  VirtualMachine.cpp  VirtualMachine.h  lexer.cpp  lexer.h  main.cpp
Google_tests/: CMakeLists.txt  lexer_tests.cpp  stack_vm_tests.cpp
sasm/: demo.sasm  lexer.cpp  lexer.h  makefile  sasm  test.sasm
src/sasm/: CMakeLists.txt  sasm.cpp
src/stack_vm/: CMakeLists.txt  main.cpp  stack_vm.cpp
stack-vm/: main.cpp  makefile  stack-vm  stack-vm.cpp
